--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "description": "An application that solves Sudoku puzzles from images.",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "icon.png",
       "sizes": "48x48 72x72 96x96 128x128 144x144 152x152 192x192 384x384 512x512",
       "type": "image/x-icon"
     }
